# auto_for_wechat_pbulishing_v2

./: .gitignore  README.md  pyproject.toml
config/: config.ini
data/cache/: media_cache.json
data/input/: article.md  example_article.md  metadata.docx
data/templates/: style.css  testing.html
src/auto_for_wechat_publishing/: __init__.py  configuration.py  main.py
src/auto_for_wechat_publishing/content/: __init__.py  data_models.py  html_generator.py  input_reader.py  media_extractor.py
src/auto_for_wechat_publishing/core/: html_processor.py  markdown_processor.py  metadata_reader.py  payload_builder.py
src/auto_for_wechat_publishing/utils/: __init__.py  cache_handler.py  config_loader.py  file_handler.py  logging_setup.py  preview.py
src/auto_for_wechat_publishing/wechat/: __init__.py  api.py  auth.py  media_manager.py  schemas.py  wechat_api_client.py  wechat_endpoints.py  wechat_exceptions.py
tests/: __init__.py  test_main.py
tests/core/: __init__.py  test_html_processor.py  test_markdown_processor.py  test_metadata_reader.py  test_payload_builder.py
tests/utils/: test_config_loader.py  test_file_handler.py  test_logging_setup.py
tests/wechat/: test_api.py  test_auth.py
